# starpod

./: .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  install.sh  wrangler.jsonc
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/examples/: basic.rs  sessions.rs  with_hooks.rs  with_mcp.rs  with_subagents.rs
crates/agent-sdk/src/: client.rs  compact.rs  error.rs  lib.rs  models.rs  options.rs  permissions.rs  provider.rs  query.rs  sanitize.rs
crates/agent-sdk/src/defaults/: models.toml
crates/agent-sdk/src/hooks/: input.rs  mod.rs  output.rs
crates/agent-sdk/src/mcp/: mod.rs
crates/agent-sdk/src/providers/: anthropic.rs  bedrock.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  vertex.rs
crates/agent-sdk/src/session/: mod.rs
crates/agent-sdk/src/tools/: definitions.rs  executor.rs  mod.rs
crates/agent-sdk/src/types/: agent.rs  messages.rs  mod.rs  permissions.rs  tools.rs
crates/orion/: Cargo.toml
crates/orion-agent/: Cargo.toml
crates/orion-agent/src/: lib.rs  tools.rs
crates/orion-core/: Cargo.toml
crates/orion-core/src/: config.rs  error.rs  lib.rs  migrate.rs  types.rs
crates/orion-cron/: Cargo.toml
crates/orion-cron/migrations/: 20260313000000_init.sql  20260314000000_epoch_timestamps.sql
crates/orion-cron/src/: lib.rs  scheduler.rs  schema.rs  store.rs  types.rs
crates/orion-gateway/: Cargo.toml
crates/orion-gateway/src/: lib.rs  routes.rs  ws.rs
crates/orion-gateway/static/: index.html
crates/orion-memory/: Cargo.toml
crates/orion-memory/migrations/: 20250301000000_init.sql
crates/orion-memory/src/: defaults.rs  indexer.rs  schema.rs  store.rs
crates/orion-session/: Cargo.toml
crates/orion-session/migrations/: 20260313000000_init.sql  20260315000000_channel_sessions.sql  20260315000001_session_title.sql  20260316000000_compaction_log.sql
crates/orion-session/src/: lib.rs  schema.rs
crates/orion-telegram/: Cargo.toml
crates/orion-telegram/src/: lib.rs
crates/orion-vault/: Cargo.toml
crates/orion-vault/migrations/: 20250313000000_init.sql
crates/orion-vault/src/: lib.rs  schema.rs
crates/orion/src/: main.rs  onboarding.rs
crates/starpod/: Cargo.toml  build.rs
crates/starpod-agent/: Cargo.toml
crates/starpod-agent/src/: flush.rs  lib.rs  nudge.rs  tools.rs
crates/starpod-auth/: Cargo.toml
crates/starpod-auth/migrations/: 20260320000000_init.sql  20260323000000_add_filesystem_enabled.sql
crates/starpod-auth/src/: api_key.rs  lib.rs  rate_limit.rs  schema.rs  types.rs
crates/starpod-browser/: Cargo.toml
crates/starpod-browser/src/: lib.rs
crates/starpod-core/: Cargo.toml
crates/starpod-core/src/: config.rs  config_migrate.rs  connector_template.rs  deploy_manifest.rs  error.rs  instance.rs  lib.rs  types.rs  workspace.rs
crates/starpod-cron/: Cargo.toml
crates/starpod-cron/migrations/: 20260316000000_retry_fields.sql  20260317000000_concurrency_timeout.sql  20260318000000_session_mode.sql  20260319000000_user_id.sql  20260320000000_run_session_id.sql
crates/starpod-cron/src/: lib.rs  scheduler.rs  schema.rs  store.rs  types.rs
crates/starpod-db/: Cargo.toml
crates/starpod-db/migrations/: 001_auth.sql  002_connectors.sql  002_sessions.sql  003_cron.sql  003_slack_events_seen.sql
crates/starpod-db/src/: connectors.rs  lib.rs  migrate.rs
crates/starpod-gateway/: Cargo.toml  build.rs
crates/starpod-gateway/src/: files.rs  lib.rs  routes.rs  settings.rs  system.rs  ws.rs
crates/starpod-hooks/: Cargo.toml
crates/starpod-hooks/src/: callback.rs  circuit_breaker.rs  discovery.rs  eligibility.rs  error.rs  event.rs  input.rs  lib.rs  output.rs  runner.rs
crates/starpod-instances/: Cargo.toml
crates/starpod-instances/src/: client.rs  deploy.rs  lib.rs  monitor.rs  types.rs
crates/starpod-memory/: Cargo.toml
crates/starpod-memory/migrations/: 20260315000001_vectors.sql
crates/starpod-memory/src/: defaults.rs  embedder.rs  fusion.rs  indexer.rs  lib.rs  schema.rs  scoring.rs  store.rs  user_view.rs
crates/starpod-session/: Cargo.toml
crates/starpod-session/migrations/: 20260314000000_session_messages.sql  20260317000000_user_id.sql  20260318000000_usage_user_id.sql  20260320000000_is_read.sql  20260320000000_triggered_by.sql
crates/starpod-session/src/: lib.rs  schema.rs
crates/starpod-skills/: Cargo.toml
crates/starpod-skills/src/: lib.rs
crates/starpod-slack/: Cargo.toml
crates/starpod-slack/examples/: listen.rs
crates/starpod-slack/src/: client.rs  connections.rs  dedup.rs  envelope.rs  error.rs  format.rs  handler.rs  lib.rs  socket.rs
crates/starpod-telegram/: Cargo.toml
crates/starpod-telegram/src/: lib.rs
crates/starpod-vault/: Cargo.toml
crates/starpod-vault/migrations/: 003_drop_is_secret.sql
crates/starpod-vault/src/: env.rs  lib.rs  opaque.rs  schema.rs
crates/starpod/connectors/: anthropic.toml  aws.toml  azure.toml  cloudflare.toml  datadog.toml  digitalocean.toml  discord.toml  elasticsearch.toml  github-apps.toml  github.toml  google-calendar.toml  google-cloud.toml  google-sheets.toml  hubspot.toml  jira.toml  linear.toml  meta-ads.toml  mongodb.toml  mysql.toml  notion.toml  openai.toml  postgres.toml  redis.toml  sendgrid.toml  sentry.toml  shopify.toml  slack.toml  smtp.toml  stripe.toml  supabase.toml  telegram.toml  twilio.toml  vercel.toml
crates/starpod/skills/data-analysis/: SKILL.md
crates/starpod/skills/data-analysis/scripts/: profile.py
crates/starpod/skills/docx/: SKILL.md
crates/starpod/skills/docx/scripts/: accept_changes.py  comment.py
crates/starpod/skills/image-gen/: SKILL.md
crates/starpod/skills/image-gen/scripts/: resize.py  watermark.py
crates/starpod/skills/pdf/: SKILL.md
crates/starpod/skills/pdf/references/: advanced.md  forms.md
crates/starpod/skills/pdf/scripts/: convert_to_images.py  extract_tables.py  (+2 more)
crates/starpod/skills/pptx/: SKILL.md
crates/starpod/skills/test-skill/: SKILL.md
crates/starpod/skills/web-research/: SKILL.md
crates/starpod/skills/xlsx/: SKILL.md
crates/starpod/src/: auth.rs  deploy.rs  main.rs  onboarding.rs
crates/starpod/tests/: cli.rs
(+134 files in other folders)
