[workspace]
resolver = "2"
members = [
    "crates/agent-sdk",
    "crates/starpod-hooks",
    "crates/starpod-core",
    "crates/starpod-memory",
    "crates/starpod-session",
    "crates/starpod-skills",
    "crates/starpod-cron",
    "crates/starpod-browser",
    "crates/starpod-agent",
    "crates/starpod-gateway",
    "crates/starpod-telegram",
    "crates/starpod-instances",
    "crates/starpod-auth",
    "crates/starpod",
]
