[workspace]
resolver = "2"
members = [
    "crates/agent-sdk",
    "crates/starpod-hooks",
    "crates/starpod-core",
    "crates/starpod-memory",
    "crates/starpod-session",
    "crates/starpod-skills",
    "crates/starpod-cron",
    "crates/starpod-browser",
    "crates/starpod-agent",
    "crates/starpod-gateway",
    "crates/starpod-telegram",
    "crates/starpod-slack",
    "crates/starpod-instances",
    "crates/starpod-vault",
    "crates/starpod-proxy",
    "crates/starpod-auth",
    "crates/starpod-db",
    "crates/starpod",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sinaptik-ai/starpod"
homepage = "https://starpod.sh"

[workspace.dependencies]
starpod-hooks = { version = "0.3.1", path = "crates/starpod-hooks" }
starpod-core = { version = "0.3.1", path = "crates/starpod-core" }
starpod-memory = { version = "0.3.1", path = "crates/starpod-memory" }
starpod-session = { version = "0.3.1", path = "crates/starpod-session" }
starpod-skills = { version = "0.3.1", path = "crates/starpod-skills" }
starpod-cron = { version = "0.3.1", path = "crates/starpod-cron" }
starpod-browser = { version = "0.3.1", path = "crates/starpod-browser" }
starpod-agent = { version = "0.3.1", path = "crates/starpod-agent" }
starpod-gateway = { version = "0.3.1", path = "crates/starpod-gateway" }
starpod-telegram = { version = "0.3.1", path = "crates/starpod-telegram" }
starpod-slack = { version = "0.3.1", path = "crates/starpod-slack" }
starpod-instances = { version = "0.3.1", path = "crates/starpod-instances" }
starpod-vault = { version = "0.3.1", path = "crates/starpod-vault" }
starpod-auth = { version = "0.3.1", path = "crates/starpod-auth" }
starpod-db = { version = "0.3.1", path = "crates/starpod-db" }
starpod-proxy = { version = "0.3.1", path = "crates/starpod-proxy" }
agent-sdk = { version = "0.3.1", path = "crates/agent-sdk", package = "starpod-agent-sdk" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
