[package]
name = "starpod-agent-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Claude Agent SDK port for Rust - build production AI agents with Claude"

[lib]
name = "agent_sdk"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Streaming helpers
async-stream = "0.3"
bytes = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Hook system
starpod-hooks = { workspace = true }

# Regex for hook matchers
regex = "1"

# UUID for session IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Glob patterns
glob = "0.3"

# Base64 encoding (for image tool results)
base64 = "0.22"

# AWS SigV4 signing (Bedrock provider)
aws-sigv4 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-smithy-runtime-api = { version = "1", features = ["client"] }

# SHA-256 for SigV4 payload hashing
sha2 = "0.10"
hex = "0.4"

# HTTP types for SigV4 signing
http = "1"

# Temporary directories
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
colored = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
