[package]
name = "orion-gateway"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP/WS gateway server for Orion"

[dependencies]
orion-core = { path = "../orion-core" }
orion-agent = { path = "../orion-agent" }
orion-session = { path = "../orion-session" }
agent-sdk = { path = "../agent-sdk" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
