[package]
name = "orion-telegram"
version = "0.1.0"
edition = "2021"
description = "Telegram bot interface for Orion"

[dependencies]
orion-core = { path = "../orion-core" }
orion-agent = { path = "../orion-agent" }
agent-sdk = { path = "../agent-sdk" }
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
