[package]
name = "orion"
version = "0.1.0"
edition = "2021"
description = "Orion CLI - personal AI assistant"

[[bin]]
name = "orion"
path = "src/main.rs"

[dependencies]
agent-sdk = { path = "../agent-sdk" }
orion-core = { path = "../orion-core" }
orion-agent = { path = "../orion-agent" }
orion-gateway = { path = "../orion-gateway" }
orion-telegram = { path = "../orion-telegram" }
orion-skills = { path = "../orion-skills" }
orion-cron = { path = "../orion-cron" }
orion-instances = { path = "../orion-instances" }
futures = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
rustyline = "15"
colored = "3"
anyhow = "1"
dialoguer = "0.11"
iana-time-zone = "0.1"
uuid = { version = "1", features = ["v4"] }
