[package]
name = "starpod-agent"
version = "0.1.0"
edition = "2021"
description = "Orchestrator for Starpod - wires agent-sdk + memory + session + vault"

[dependencies]
agent-sdk = { path = "../agent-sdk" }
starpod-core = { path = "../starpod-core" }
starpod-memory = { path = "../starpod-memory", features = ["embeddings"] }
starpod-session = { path = "../starpod-session" }
starpod-skills = { path = "../starpod-skills" }
starpod-cron = { path = "../starpod-cron" }
starpod-browser = { path = "../starpod-browser" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
htmd = "0.1"
lol_html = "2"
readability = { version = "0.3", default-features = false }

[dev-dependencies]
tempfile = "3"
