[package]
name = "starpod-browser"
version = "0.1.0"
edition = "2021"
description = "Lightweight browser automation for Starpod via CDP (Lightpanda/Chromium)"

[dependencies]
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
tokio = { version = "1", features = ["process", "net", "time", "rt"] }
base64 = "0.22"
tracing = "0.1"
thiserror = "2"
serde_json = "1"
