[package]
name = "starpod-browser"
version = "0.1.0"
edition = "2021"
description = "Lightweight browser automation for Starpod via CDP (Lightpanda/Chromium)"

[dependencies]
async-tungstenite = { version = "0.28", features = ["tokio-runtime"] }
futures-util = "0.3"
tokio = { version = "1", features = ["process", "net", "time", "rt", "sync", "fs", "macros"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
