[package]
name = "starpod-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, config, and error handling for Starpod"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["fs"] }
toml = "0.8"
tracing = "0.1"
dirs = "6"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
