[package]
name = "starpod-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types, config, and error handling for Starpod"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
toml = "0.8"
tracing = "0.1"
dotenvy = "0.15"
iana-time-zone = "0.1"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
