[package]
name = "starpod-gateway"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP/WS gateway server for Starpod"

[dependencies]
starpod-core = { path = "../starpod-core" }
starpod-agent = { path = "../starpod-agent" }
starpod-cron = { path = "../starpod-cron" }
starpod-session = { path = "../starpod-session" }
agent-sdk = { path = "../agent-sdk" }
starpod-instances = { path = "../starpod-instances" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
include_dir = "0.7"
reqwest = { version = "0.12" }
regex = "1"
notify = "7"
notify-debouncer-mini = "0.5"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
urlencoding = "2"
tempfile = "3"
