[package]
name = "starpod-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Axum HTTP/WS gateway server for Starpod"

[dependencies]
starpod-core = { workspace = true }
starpod-agent = { workspace = true }
starpod-cron = { workspace = true }
starpod-session = { workspace = true }
agent-sdk = { workspace = true }
starpod-instances = { workspace = true }
starpod-auth = { workspace = true }
starpod-memory = { workspace = true }
starpod-skills = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
include_dir = "0.7"
reqwest = { version = "0.12" }
regex = "1"
toml = "0.8"
chrono = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
urlencoding = "2"
tempfile = "3"
