[package]
name = "starpod-hooks"
version = "0.1.0"
edition = "2021"
description = "Lifecycle hook system for Starpod — event types, callbacks, matching, and execution"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Regex for hook matchers
regex = "1"

# File discovery
glob = "0.3"
which = "7"

# Async runtime (for CancellationToken + timeout + process)
tokio = { version = "1", features = ["time", "process", "io-util"] }
tokio-util = "0.7"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1"
