[package]
name = "starpod-instances"
version = "0.1.0"
edition = "2021"
description = "Remote instance management client for Starpod"

[dependencies]
starpod-core = { path = "../starpod-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "=0.6.4"
tokio = { version = "1", features = ["full", "test-util"] }
