[package]
name = "starpod-instances"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Remote instance management client for Starpod"

[dependencies]
starpod-core = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
base64 = "0.22"
urlencoding = "2"
uuid = "1"

[dev-dependencies]
wiremock = "=0.6.4"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
