[package]
name = "starpod-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Memory system for Starpod - SQLite FTS5 + markdown file management"

[features]
default = []
embeddings = ["dep:fastembed"]

[dependencies]
starpod-core = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs", "sync", "macros"] }
tracing = "0.1"
async-trait = "0.1"
fastembed = { version = "4", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
