[package]
name = "starpod-session"
version = "0.1.0"
edition = "2021"
description = "Session management for Starpod - metadata, time-gap analysis, usage tracking"

[dependencies]
starpod-core = { path = "../starpod-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
