[package]
name = "starpod-skills"
version = "0.1.0"
edition = "2021"
description = "Self-extension skill system for Starpod"

[dependencies]
starpod-core = { path = "../starpod-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
