[package]
name = "starpod-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AgentSkills-compatible skill system for Starpod"

[dependencies]
starpod-core = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
