[package]
name = "starpod-slack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Slack Socket Mode bot interface for Starpod"

[dependencies]
starpod-core = { workspace = true }
starpod-agent = { workspace = true }
starpod-auth = { workspace = true }
agent-sdk = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest = { workspace = true, features = ["json"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tempfile = "3"
