[package]
name = "starpod-telegram"
version = "0.1.0"
edition = "2021"
description = "Telegram bot interface for Starpod"

[dependencies]
starpod-core = { path = "../starpod-core" }
starpod-agent = { path = "../starpod-agent" }
starpod-auth = { path = "../starpod-auth" }
agent-sdk = { path = "../agent-sdk" }
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
