[package]
name = "starpod-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Telegram bot interface for Starpod"

[dependencies]
starpod-core = { workspace = true }
starpod-agent = { workspace = true }
starpod-auth = { workspace = true }
agent-sdk = { workspace = true }
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
