[package]
name = "starpod-vault"
version = "0.1.0"
edition = "2021"
description = "Encrypted credential storage for Starpod - AES-256-GCM"

[dependencies]
starpod-core = { path = "../starpod-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
