[package]
name = "starpod"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Starpod CLI - personal AI assistant"

[[bin]]
name = "starpod"
path = "src/main.rs"

[dependencies]
agent-sdk = { workspace = true }
starpod-core = { workspace = true }
starpod-agent = { workspace = true }
starpod-gateway = { workspace = true }
starpod-telegram = { workspace = true }
starpod-skills = { workspace = true }
starpod-cron = { workspace = true }
starpod-instances = { workspace = true }
starpod-auth = { workspace = true }
futures = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
colored = "3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dialoguer = "0.12.0"
dirs = "6"
open = "5"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
